--- a/src/app/home/modal-pedido-cons/modal-pedido-cons.component.html
+++ b/src/app/home/modal-pedido-cons/modal-pedido-cons.component.html
@@ -1,75 +1,101 @@
-<table style='width: 90%!important;margin: auto;font-size:14px;' class='table table-sm'>
-    <tr>
-        <td width='100' style='border:none !important;'><b>Data Pedido</b></td>    
-        <td style='border:none !important;'>{{pedidoSelecionado.dataPedido | date:'dd/MM/yyyy'}}</td>    
-    </tr>
-    <tr>
-        <td style='border:none !important;'><b>Clínica</b></td>    
-        <td style='border:none !important;'>{{pedidoSelecionado.clinica}}</td>    
-    </tr>
-     
-    <tr>
-        <td style='border:none !important;'><b>Dentista</b></td>    
-        <td style='border:none !important;'>{{pedidoSelecionado.dentista}}</td>    
-    </tr>
-    <tr>
-        <td style='border:none !important;'><b>Paciente</b></td>    
-        <td style='border:none !important;'>{{pedidoSelecionado.nomePaciente}}</td>    
-    </tr>
-    <tr>
-        <td style='border:none !important;'><b>Protético(a)</b></td>    
-        <td style='border:none !important;'>{{pedidoSelecionado.protetico}}</td>    
-    </tr> 
-        
-</table>
-<br>
+<table
+  style="width: 90%!important;margin: auto;font-size:14px;"
+  class="table table-sm"
+>
+  <tr>
+    <td width="100" style="border:none !important;"><b>Data Pedido</b></td>
+    <td style="border:none !important;">
+      {{ pedidoSelecionado.dataPedido | date: "dd/MM/yyyy" }}
+    </td>
+  </tr>
+  <tr>
+    <td style="border:none !important;"><b>Clínica</b></td>
+    <td style="border:none !important;">{{ pedidoSelecionado.clinica }}</td>
+  </tr>
 
-<table class='table  table-bordered table-sm' style='width: 90% !important;margin: auto;font-size:14px;' >
-    <tr>
-        <td ></td>
-        <td style='text-align:center'><b>Derscrição</b></td>
-        <td style='text-align:center'><b>Valor Unitário</b></td>
-        <td style='text-align:center'><b>Qde</b></td>
-        <td style='text-align:center'><b>Total</b></td>
-     </tr>
-     <tr *ngFor="let item of pedidoSelecionado.itens; let i= index; ">
-        <td>{{i + 1}}</td>
-        <td>{{item.descricao}}</td>
-        <td style='text-align:right'>{{item.valorUnitario | currency}}</td>
-        <td style='text-align:center'>{{item.qde}}</td>
-        <td style='text-align:right'>{{item.valorTotal | currency}}</td>
-     </tr> 
-     <tr>
-        <td  colspan='4'><b>Valor Total</b></td>
-        <td style='text-align:right'><b>{{pedidoSelecionado.valorTotal | currency }}</b></td>
-        
-    <tr>
-    <tr *ngIf="pedidoSelecionado.desconto > 0">
-        <td colspan='4'><b>Desconto ({{pedidoSelecionado.desconto}} %)</b></td>
-        <td style='text-align:right'><b>{{pedidoSelecionado.valorTotal - pedidoSelecionado.valorLiquido | currency }}</b></td>
-           
-    </tr> 
-    <tr *ngIf="pedidoSelecionado.desconto > 0">
-        <td colspan='4'><b>Valor Total Líquido</b></td>
-        <td style='text-align:right'><b>{{pedidoSelecionado.valorLiquido | currency }}</b></td>
-            
-    </tr>      
-</table> 
-<br>
-<table style='width: 90%!important;margin: auto;font-size:14px;' class='table table-sm'>
-<tr>
-    <td width='100' style='border:none !important;'><b>Prazo</b></td>    
-    <td style='border:none !important;'>{{pedidoSelecionado.prazo}} dias corridos</td>    
-</tr>
-<tr>
-    <td width='100' style='border:none !important;'><b>Previsão</b></td>    
-    <td style='border:none !important;'>{{pedidoSelecionado.dataEntregaPrevista  | date:'dd/MM/yyyy'}}</td>    
-</tr>
-<tr>
-    <td width='100' style='border:none !important;'><b>Observações</b></td>    
-    <td style='border:none !important;'>{{pedidoSelecionado.obs}}</td>    
-</tr>
+  <tr>
+    <td style="border:none !important;"><b>Dentista</b></td>
+    <td style="border:none !important;">{{ pedidoSelecionado.dentista }}</td>
+  </tr>
+  <tr>
+    <td style="border:none !important;"><b>Paciente</b></td>
+    <td style="border:none !important;">
+      {{ pedidoSelecionado.nomePaciente }}
+    </td>
+  </tr>
+  <tr>
+    <td style="border:none !important;"><b>Protético(a)</b></td>
+    <td style="border:none !important;">{{ pedidoSelecionado.protetico }}</td>
+  </tr>
 </table>
-<br>  
 
-  
+<br />
+
+<table
+  class="table  table-bordered table-sm"
+  style="width: 90% !important;margin: auto;font-size:14px;"
+>
+  <tr>
+    <td></td>
+    <td style="text-align:center"><b>Derscrição</b></td>
+    <td style="text-align:center"><b>Valor Unitário</b></td>
+    <td style="text-align:center"><b>Qde</b></td>
+    <td style="text-align:center"><b>Total</b></td>
+  </tr>
+  <tr *ngFor="let item of pedidoSelecionado.itens; let i = index">
+    <td>{{ i + 1 }}</td>
+    <td>{{ item.descricao }}</td>
+    <td style="text-align:right">{{ item.valorUnitario | currency }}</td>
+    <td style="text-align:center">{{ item.qde }}</td>
+    <td style="text-align:right">{{ item.valorTotal | currency }}</td>
+  </tr>
+  <tr>
+    <td colspan="4"><b>Valor Total</b></td>
+    <td style="text-align:right">
+      <b>{{ pedidoSelecionado.valorTotal | currency }}</b>
+    </td>
+  </tr>
+
+  <tr></tr>
+  <tr *ngIf="pedidoSelecionado.desconto > 0">
+    <td colspan="4">
+      <b>Desconto ({{ pedidoSelecionado.desconto }} %)</b>
+    </td>
+    <td style="text-align:right">
+      <b>{{
+        pedidoSelecionado.valorTotal - pedidoSelecionado.valorLiquido | currency
+      }}</b>
+    </td>
+  </tr>
+  <tr *ngIf="pedidoSelecionado.desconto > 0">
+    <td colspan="4"><b>Valor Total Líquido</b></td>
+    <td style="text-align:right">
+      <b>{{ pedidoSelecionado.valorLiquido | currency }}</b>
+    </td>
+  </tr>
+</table>
+
+<br />
+<table
+  style="width: 90%!important;margin: auto;font-size:14px;"
+  class="table table-sm"
+>
+  <tr>
+    <td width="100" style="border:none !important;"><b>Prazo</b></td>
+    <td style="border:none !important;">
+      {{ pedidoSelecionado.prazo }} dias corridos
+    </td>
+  </tr>
+  <tr>
+    <td width="100" style="border:none !important;"><b>Previsão</b></td>
+    <td style="border:none !important;">
+      {{ pedidoSelecionado.dataEntregaPrevista | date: "dd/MM/yyyy" }}
+    </td>
+  </tr>
+  <tr>
+    <td width="100" style="border:none !important;"><b>Observações</b></td>
+    <td style="border:none !important;">{{ pedidoSelecionado.obs }}</td>
+  </tr>
+</table>
+
+<br />
