--- a/src/app/home/pedidos-em-processo/pedidos-em-processo.component.html
+++ b/src/app/home/pedidos-em-processo/pedidos-em-processo.component.html
@@ -1,188 +1,337 @@
-
-
-<ng-template #content  let-modal id='modalPedido'>
-     
-    <div class="modal-header">
-      
-      <h4 class="modal-title">Pedido nº {{pedidoSelecionado.id}}</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <table style='width: 90%!important;margin: auto;font-size:14px;' class='table table-sm'>
-        <tr>
-            <td width='100' style='border:none !important;'><b>Data Pedido</b></td>    
-            <td style='border:none !important;'>{{pedidoSelecionado.dataPedido | date:'dd/MM/yyyy'}}</td>    
-        </tr>
-        <tr>
-            <td style='border:none !important;'><b>Clínica</b></td>    
-            <td style='border:none !important;'>{{pedidoSelecionado.clinica}}</td>    
-        </tr>
-        <tr>
-            <td style='border:none !important;'><b>Dentista</b></td>    
-            <td style='border:none !important;'>{{pedidoSelecionado.dentista}}</td>    
-        </tr>
-        <tr>
-            <td style='border:none !important;'><b>Paciente</b></td>    
-            <td style='border:none !important;'>{{pedidoSelecionado.nomePaciente}}</td>    
-        </tr>
-        <tr>
-            <td style='border:none !important;'><b>Protético(a)</b></td>    
-            <td style='border:none !important;'>{{pedidoSelecionado.protetico}}</td>    
-        </tr> 
-            
+<ng-template #content let-modal id="modalPedido">
+  <div class="modal-header">
+    <h4 class="modal-title">Pedido nº {{ pedidoSelecionado.id }}</h4>
+    <button
+      type="button"
+      class="close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    >
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <table
+      style="width: 90%!important;margin: auto;font-size:14px;"
+      class="table table-sm"
+    >
+      <tr>
+        <td width="100" style="border:none !important;"><b>Data Pedido</b></td>
+        <td style="border:none !important;">
+          {{ pedidoSelecionado.dataPedido | date: "dd/MM/yyyy" }}
+        </td>
+      </tr>
+      <tr>
+        <td style="border:none !important;"><b>Clínica</b></td>
+        <td style="border:none !important;">{{ pedidoSelecionado.clinica }}</td>
+      </tr>
+      <tr>
+        <td style="border:none !important;"><b>Dentista</b></td>
+        <td style="border:none !important;">
+          {{ pedidoSelecionado.dentista }}
+        </td>
+      </tr>
+      <tr>
+        <td style="border:none !important;"><b>Paciente</b></td>
+        <td style="border:none !important;">
+          {{ pedidoSelecionado.nomePaciente }}
+        </td>
+      </tr>
+      <tr>
+        <td style="border:none !important;"><b>Protético(a)</b></td>
+        <td style="border:none !important;">
+          {{ pedidoSelecionado.protetico }}
+        </td>
+      </tr>
     </table>
-    <br>
-    
-    <table class='table  table-bordered table-sm' style='width: 90% !important;margin: auto;font-size:14px;' >
-        <tr>
-            <td ></td>
-            <td style='text-align:center'><b>Derscrição</b></td>
-            <td style='text-align:center'><b>Valor Unitário</b></td>
-            <td style='text-align:center'><b>Qde</b></td>
-            <td style='text-align:center'><b>Total</b></td>
-         </tr>
-         <tr *ngFor="let item of pedidoSelecionado.itens; let i= index; ">
-            <td>{{i + 1}}</td>
-            <td>{{item.descricao}}</td>
-            <td style='text-align:right'>{{item.valorUnitario | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
-            <td style='text-align:center'>{{item.qde}}</td>
-            <td style='text-align:right'>{{item.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
-         </tr> 
-         <tr>
-            <td  colspan='4'><b>Valor Total</b></td>
-            <td style='text-align:right'><b>{{pedidoSelecionado.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
-            
-        <tr>
-        <tr *ngIf="pedidoSelecionado.desconto > 0">
-            <td colspan='4'><b>Desconto ({{pedidoSelecionado.desconto}} %)</b></td>
-            <td style='text-align:right'><b>{{pedidoSelecionado.valorTotal - pedidoSelecionado.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
-               
-        </tr> 
-        <tr *ngIf="pedidoSelecionado.desconto > 0">
-            <td colspan='4'><b>Valor Total Líquido</b></td>
-            <td style='text-align:right'><b>{{pedidoSelecionado.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
-                
-        </tr>      
-    </table> 
-    <br>
-    <table style='width: 90%!important;margin: auto;font-size:14px;' class='table table-sm'>
-    <tr>
-        <td width='100' style='border:none !important;'><b>Prazo</b></td>    
-        <td style='border:none !important;'>{{pedidoSelecionado.prazo}} dias corridos</td>    
-    </tr>
-    <tr>
-        <td width='100' style='border:none !important;'><b>Previsão</b></td>    
-        <td style='border:none !important;'>{{pedidoSelecionado.dataEntregaPrevista  | date:'dd/MM/yyyy'}}</td>    
-    </tr>
-    <tr>
-        <td width='100' style='border:none !important;'><b>Observações</b></td>    
-        <td style='border:none !important;'>{{pedidoSelecionado.obs}}</td>    
-    </tr>
+
+    <br />
+
+    <table
+      class="table  table-bordered table-sm"
+      style="width: 90% !important;margin: auto;font-size:14px;"
+    >
+      <tr>
+        <td></td>
+        <td style="text-align:center"><b>Derscrição</b></td>
+        <td style="text-align:center"><b>Valor Unitário</b></td>
+        <td style="text-align:center"><b>Qde</b></td>
+        <td style="text-align:center"><b>Total</b></td>
+      </tr>
+      <tr *ngFor="let item of pedidoSelecionado.itens; let i = index">
+        <td>{{ i + 1 }}</td>
+        <td>{{ item.descricao }}</td>
+        <td style="text-align:right">
+          {{ item.valorUnitario | currency: "BRL":"symbol":"0.2-2":"pt" }}
+        </td>
+        <td style="text-align:center">{{ item.qde }}</td>
+        <td style="text-align:right">
+          {{ item.valorTotal | currency: "BRL":"symbol":"0.2-2":"pt" }}
+        </td>
+      </tr>
+      <tr>
+        <td colspan="4"><b>Valor Total</b></td>
+        <td style="text-align:right">
+          <b>{{
+            pedidoSelecionado.valorTotal | currency: "BRL":"symbol":"0.2-2":"pt"
+          }}</b>
+        </td>
+      </tr>
+
+      <tr></tr>
+      <tr *ngIf="pedidoSelecionado.desconto > 0">
+        <td colspan="4">
+          <b>Desconto ({{ pedidoSelecionado.desconto }} %)</b>
+        </td>
+        <td style="text-align:right">
+          <b>{{
+            pedidoSelecionado.valorTotal - pedidoSelecionado.valorLiquido
+              | currency: "BRL":"symbol":"0.2-2":"pt"
+          }}</b>
+        </td>
+      </tr>
+      <tr *ngIf="pedidoSelecionado.desconto > 0">
+        <td colspan="4"><b>Valor Total Líquido</b></td>
+        <td style="text-align:right">
+          <b>{{
+            pedidoSelecionado.valorLiquido
+              | currency: "BRL":"symbol":"0.2-2":"pt"
+          }}</b>
+        </td>
+      </tr>
     </table>
-    <br>  
-    </div> 
-   
-    <div class="modal-footer">
-     
-      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Fechar</button>
-      <button type="button" class="btn btn-light" (click)="modal.close('Close click')" [elementToPrint]="content" ngPrint>Imprimir</button>
-    </div>
-      
+
+    <br />
+    <table
+      style="width: 90%!important;margin: auto;font-size:14px;"
+      class="table table-sm"
+    >
+      <tr>
+        <td width="100" style="border:none !important;"><b>Prazo</b></td>
+        <td style="border:none !important;">
+          {{ pedidoSelecionado.prazo }} dias corridos
+        </td>
+      </tr>
+      <tr>
+        <td width="100" style="border:none !important;"><b>Previsão</b></td>
+        <td style="border:none !important;">
+          {{ pedidoSelecionado.dataEntregaPrevista | date: "dd/MM/yyyy" }}
+        </td>
+      </tr>
+      <tr>
+        <td width="100" style="border:none !important;"><b>Observações</b></td>
+        <td style="border:none !important;">{{ pedidoSelecionado.obs }}</td>
+      </tr>
+    </table>
+
+    <br />
+  </div>
+
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-light"
+      (click)="modal.close('Close click')"
+    >
+      Fechar
+    </button>
+    <button
+      type="button"
+      class="btn btn-light"
+      (click)="modal.close('Close click')"
+      [elementToPrint]="content"
+      ngPrint
+    >
+      Imprimir
+    </button>
+  </div>
 </ng-template>
 
-
-<ng-template #conferenciaEntrega  let-modal>
+<ng-template #conferenciaEntrega let-modal>
   <div class="modal-header">
-    <h4 class="modal-title">Entrega - {{clinica.nomeSimp}}</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+    <h4 class="modal-title">Entrega - {{ clinica.nomeSimp }}</h4>
+    <button
+      type="button"
+      class="close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    >
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
     <div class="container">
-   
-   <table class='table table-hover'>
-    <tr style='color:#000099'>
-      <td style='text-align: center;'><b>Id</b></td>
-      <td width='20%' style='text-align:center;'><b>Paciente</b></td>
-      <td width='30%' style='text-align:center;'><b>Dentista</b></td>
-      <td width='15%' style='text-align:center;'><b>Data Prevista</b></td>
-      <td width='15%' style='text-align:center;'><b>Valor</b></td>
-     </tr>
-      <tr *ngFor="let pedido of pedidosCheckados">
-      <td width='5%' *ngIf="clinica.nomeSimp == pedido.clinica" style='text-align: center;;cursor:pointer'  (click)="abreModalPedido(content, pedido.id)">{{pedido.id}}</td>
-      <td *ngIf="clinica.nomeSimp == pedido.clinica" width='20%'>{{pedido.nomePaciente}}</td>
-      <td *ngIf="clinica.nomeSimp == pedido.clinica"  width='30%'>{{pedido.dentista}}</td>
-      <td *ngIf="clinica.nomeSimp == pedido.clinica" width='15%' style='text-align: center;'>{{pedido.dataEntregaPrevista  | date:'dd/MM/yyyy'}}</td>
-      <td *ngIf="clinica.nomeSimp == pedido.clinica" width='15%' style='text-align: right;'>{{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
-    
-      </tr> 
-   </table>
-   <br>
-   <table class='table'>
-     <!--
+      <table class="table table-hover">
+        <tr style="color:#000099">
+          <td style="text-align: center;"><b>Id</b></td>
+          <td width="20%" style="text-align:center;"><b>Paciente</b></td>
+          <td width="30%" style="text-align:center;"><b>Dentista</b></td>
+          <td width="15%" style="text-align:center;"><b>Data Prevista</b></td>
+          <td width="15%" style="text-align:center;"><b>Valor</b></td>
+        </tr>
+        <tr *ngFor="let pedido of pedidosCheckados">
+          <td
+            width="5%"
+            *ngIf="clinica.nomeSimp == pedido.clinica"
+            style="text-align: center;;cursor:pointer"
+            (click)="abreModalPedido(content, pedido.id)"
+          >
+            {{ pedido.id }}
+          </td>
+          <td *ngIf="clinica.nomeSimp == pedido.clinica" width="20%">
+            {{ pedido.nomePaciente }}
+          </td>
+          <td *ngIf="clinica.nomeSimp == pedido.clinica" width="30%">
+            {{ pedido.dentista }}
+          </td>
+          <td
+            *ngIf="clinica.nomeSimp == pedido.clinica"
+            width="15%"
+            style="text-align: center;"
+          >
+            {{ pedido.dataEntregaPrevista | date: "dd/MM/yyyy" }}
+          </td>
+          <td
+            *ngIf="clinica.nomeSimp == pedido.clinica"
+            width="15%"
+            style="text-align: right;"
+          >
+            {{ pedido.valorLiquido | currency: "BRL":"symbol":"0.2-2":"pt" }}
+          </td>
+        </tr>
+      </table>
+
+      <br />
+      <table class="table">
+        <!--
       <tr height="30">
         <td style='border:none !important;'>Data Entrega</td>
         <td style='border:none !important;'><input type='date' [(ngModel)]='dataEntrega' class='form-control' style='width:200px'></td>
       </tr> 
     -->
-      <tr height="30">
-        <td style='border:none !important;'>Obs</td>
-        <td style='border:none !important;'><input type='text' [(ngModel)]='obs' class='form-control'></td>
-      </tr>  
-   </table>
-   <br>
-   
- </div>
-</div>
-<div class="modal-footer">
- 
-  <button type="button" class="btn btn-info btn-sm" (click)="modal.close('Close click')">Fechar</button>
-  <button type="button" class="btn btn-info btn-sm" [disabled]="disabledConfEntrega" (click)="confirmarEntrega(clinica.id); ">{{labelConfEntrega}}</button>
-</div>
-
-</ng-template>
-  
-<br>
-<div style='text-align:center' id='titulo'><b>Pedidos</b></div><br>
-<div class="container">
-<div class="alert alert-info" id='divAguardar'>Aguarde enquanto os dados estão sendo carregados</div>
-<div id='dadosCarregados'>
-    <table class='table table-dark' style='text-align: center;'>
-        <tr>
-        <td colspan='2' style='text-align: center;'>Id</td>
-
-        <td width='20%' style='text-align: center;'>Paciente</td>
-        <td width='30%' style='text-align: center;'>Dentista</td>
-        <td width='20%' style='text-align: center;'>Data Prevista</td>
-        <td width='20%' style='text-align: center;'>Valor</td>
-        <td width='10%' style='text-align: center;'>Entrega</td>
+        <tr height="30">
+          <td style="border:none !important;">Obs</td>
+          <td style="border:none !important;">
+            <input type="text" [(ngModel)]="obs" class="form-control" />
+          </td>
         </tr>
-    </table>    
-    
-    <div *ngFor="let clinica of clinicas">
-     <div style='margin-bottom:20px;color:#000099;font-size:18px;text-align:center'>{{clinica.nomeSimp}}</div>
-    
-     
-     <table class='table table-hover'>
-       <tbody>
-        <tr *ngFor="let pedido of pedidos">
-        <th width='5%' *ngIf="clinica.nomeSimp == pedido.clinica" style='text-align: center;cursor:pointer' >{{pedido.id}}</th>
-        <td width='5%' *ngIf="clinica.nomeSimp == pedido.clinica" style='text-align: center;cursor:pointer' title='Detalhes do pedido nº {{pedido.id}}' (click)="abreModalPedido(content, pedido.id)" ><i class="material-icons">assignment </i></td>
-        <td *ngIf="clinica.nomeSimp == pedido.clinica" width='20%'>{{pedido.nomePaciente}}</td>
-        <td *ngIf="clinica.nomeSimp == pedido.clinica"  width='30%'>{{pedido.dentista}}</td>
-        <td *ngIf="clinica.nomeSimp == pedido.clinica" width='15%' style='text-align: center;'>{{pedido.dataEntregaPrevista  | date:'dd/MM/yyyy'}}</td>
-        <td *ngIf="clinica.nomeSimp == pedido.clinica" width='15%' style='text-align: right;'>{{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
-        <td *ngIf="clinica.nomeSimp == pedido.clinica" width='10%' style='text-align: center;'><input type='checkbox' id='checkEntrega_{{pedido.id}}' (click)="checkEntrega(clinica.id, pedido.id)"></td>  
-        </tr> 
-       </tbody>    
-     </table>
-     <div style='display:none;text-align:right' id="botaoRegistrarEntrega_{{clinica.id}}" ><button  class='btn btn-info btn-sm' (click)="conferirEntrega(clinica.id, conferenciaEntrega)">Registrar Entrega</button></div>
-     
-     <br>   
-     </div>
+      </table>
 
-</div>
+      <br />
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-info btn-sm"
+      (click)="modal.close('Close click')"
+    >
+      Fechar
+    </button>
+    <button
+      type="button"
+      class="btn btn-info btn-sm"
+      [disabled]="disabledConfEntrega"
+      (click)="confirmarEntrega(clinica.id)"
+    >
+      {{ labelConfEntrega }}
+    </button>
+  </div>
+</ng-template>
+
+<br />
+<div style="text-align:center" id="titulo"><b>Pedidos</b></div>
+<br />
+<div class="container">
+  <div class="alert alert-info" id="divAguardar">
+    Aguarde enquanto os dados estão sendo carregados
+  </div>
+  <div id="dadosCarregados">
+    <table class="table table-dark" style="text-align: center;">
+      <tr>
+        <td colspan="2" style="text-align: center;">Id</td>
+
+        <td width="20%" style="text-align: center;">Paciente</td>
+        <td width="30%" style="text-align: center;">Dentista</td>
+        <td width="20%" style="text-align: center;">Data Prevista</td>
+        <td width="20%" style="text-align: center;">Valor</td>
+        <td width="10%" style="text-align: center;">Entrega</td>
+      </tr>
+    </table>
+
+    <div *ngFor="let clinica of clinicas">
+      <div
+        style="margin-bottom:20px;color:#000099;font-size:18px;text-align:center"
+      >
+        {{ clinica.nomeSimp }}
+      </div>
+
+      <table class="table table-hover">
+        <tbody>
+          <tr *ngFor="let pedido of pedidos">
+            <th
+              width="5%"
+              *ngIf="clinica.nomeSimp == pedido.clinica"
+              style="text-align: center;cursor:pointer"
+            >
+              {{ pedido.id }}
+            </th>
+            <td
+              width="5%"
+              *ngIf="clinica.nomeSimp == pedido.clinica"
+              style="text-align: center;cursor:pointer"
+              title="Detalhes do pedido nº {{ pedido.id }}"
+              (click)="abreModalPedido(content, pedido.id)"
+            >
+              <i class="material-icons">assignment </i>
+            </td>
+            <td *ngIf="clinica.nomeSimp == pedido.clinica" width="20%">
+              {{ pedido.nomePaciente }}
+            </td>
+            <td *ngIf="clinica.nomeSimp == pedido.clinica" width="30%">
+              {{ pedido.dentista }}
+            </td>
+            <td
+              *ngIf="clinica.nomeSimp == pedido.clinica"
+              width="15%"
+              style="text-align: center;"
+            >
+              {{ pedido.dataEntregaPrevista | date: "dd/MM/yyyy" }}
+            </td>
+            <td
+              *ngIf="clinica.nomeSimp == pedido.clinica"
+              width="15%"
+              style="text-align: right;"
+            >
+              {{ pedido.valorLiquido | currency: "BRL":"symbol":"0.2-2":"pt" }}
+            </td>
+            <td
+              *ngIf="clinica.nomeSimp == pedido.clinica"
+              width="10%"
+              style="text-align: center;"
+            >
+              <input
+                type="checkbox"
+                id="checkEntrega_{{ pedido.id }}"
+                (click)="checkEntrega(clinica.id, pedido.id)"
+              />
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div
+        style="display:none;text-align:right"
+        id="botaoRegistrarEntrega_{{ clinica.id }}"
+      >
+        <button
+          class="btn btn-info btn-sm"
+          (click)="conferirEntrega(clinica.id, conferenciaEntrega)"
+        >
+          Registrar Entrega
+        </button>
+      </div>
+
+      <br />
+    </div>
+  </div>
 </div>
