--- a/src/app/home/confirm-entrega/confirm-entrega.component.html
+++ b/src/app/home/confirm-entrega/confirm-entrega.component.html
@@ -1,89 +1,169 @@
-<br>
-<br>
-<br>
-<br>
+<br />
+<br />
+<br />
+<br />
 <div class="row">
-    <div class="col-md-4">
-     <div style='text-align: center;'>   
-    <button class="btn btn-info btn-sm" (click)='acessoPedidosEmProcesso()' style='margin-bottom: 20px;'>VOLTAR</button><br> 
-    <button class="btn btn-info btn-sm" (click)='imprimir();'  >IMPRIMIR NOTA DE ENTREGA</button>    
-    </div>    
-</div>
-<div class="col-md-8">
-    <div style='padding:15px; text-align: center; border:1px solid #000;width:630px' id='caixaNotaEntrega'>
-    <table style='width: 600px !important;margin: auto;'>
-        <tr>
-            <td width='90px'><img src="http://www.detalheprotetico.com.br/img/logo_detalhe_web.png" width='80px'/></td>
-            <td style='text-align:center;font-family: Arial, Helvetica, sans-serif;font-size:14px;color:#000099'><b>NOTA DE ENTREGA nº {{entregaId}} <br/>({{nomeClinica}})</b></td>
-        </tr>        
-    </table>
-    
-    
-    <br>
-    <div *ngFor="let pedido of pedidos">
-        <table style='width: 600px !important;margin: auto; font-family: Arial, Helvetica, sans-serif;font-size:12px; text-align:left;'>
-            <tr height="20">
-                <td style='text-align: center;' colspan='4'><b>PEDIDO nº {{pedido.id}}</b></td>
-            </tr>   
-            <tr height="20">
-                <td width='100'><b>Data Pedido</b></td>    
-                <td>{{pedido.dataPedido | date:'dd/MM/yyyy'}}</td>    
-            </tr>
-                   
-            <tr height="20">
-                <td ><b>Dentista</b></td>    
-                <td >{{pedido.dentista}}</td>    
-            </tr>
-            <tr height="20">
-                <td ><b>Paciente</b></td>    
-                <td >{{pedido.nomePaciente}}</td>    
-            </tr>
-        </table>
-        <table style='width: 600px !important;margin: auto;font-family: Arial, Helvetica, sans-serif;border-collapse: collapse;border:1px solid #ccc; font-size:12px;padding:5px;text-align:left; ' >
-            <tr height="20" style='border-bottom:1px solid #ccc;text-align:center;'>
-                <td width="10%"></td>
-                <td width="40%" style='text-align: center;'><b>Derscrição</b></td>
-                <td width="20%" style='text-align: center;'><b>Valor Unitário</b></td>
-                <td width="10%" style='text-align: center;'><b>Qde</b></td>
-                <td width="20%" style='text-align: center;'><b>Total</b></td>
-             </tr>
-             <tr height="20" *ngFor="let item of pedido.itens; let i= index; " style='border-bottom:1px solid #ccc;'>
-                <td style='text-align: center;'>{{i + 1}}</td>
-                <td>{{item.descricao}}</td>
-                <td style='text-align: right;padding-right:5px'>{{item.valorUnitario | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
-                <td style='text-align: center;'>{{item.qde}}</td>
-                <td style='text-align: right;padding-right:5px'> {{item.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
-             </tr> 
-             <tr height="20" style='border-bottom:1px solid #ccc;'>
-                <td  colspan='4'><b>Valor Total</b></td>
-                <td style='text-align: right;padding-right:5px'> <b> {{pedido.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
-                
-            <tr>
-            <tr height="20" *ngIf="pedido.desconto > 0" style='border-bottom:1px solid #ccc;'>
-                <td colspan='4'><b>Desconto ({{pedido.desconto}} %)</b></td>
-                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorTotal - pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
-                   
-            </tr> 
-            <tr height="20" *ngIf="pedido.desconto > 0">
-                <td colspan='4'><b>Valor Total Líquido</b></td>
-                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</b></td>
-                    
-            </tr>      
-        </table>
-              <br>
-    </div>    
-    <br>
-    <br>
-
-    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Observações:</b> {{obs }}</div>
-
-    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total da entrega:</b> {{totalEntrega |currency:'BRL':'symbol':'0.2-2':'pt' }}</div>
-
-    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Data da entrega:</b> ___/___/________</div>
-
-    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;'><b>Nome legível: </b>___________________________________________</div>
-    
+  <div class="col-md-4">
+    <div style="text-align: center;">
+      <button
+        class="btn btn-info btn-sm"
+        (click)="acessoPedidosEmProcesso()"
+        style="margin-bottom: 20px;"
+      >
+        VOLTAR</button
+      ><br />
+      <button class="btn btn-info btn-sm" (click)="imprimir()">
+        IMPRIMIR NOTA DE ENTREGA
+      </button>
     </div>
+  </div>
+  <div class="col-md-8">
+    <div
+      style="padding:15px; text-align: center; border:1px solid #000;width:630px"
+      id="caixaNotaEntrega"
+    >
+      <table style="width: 600px !important;margin: auto;">
+        <tr>
+          <td width="90px">
+            <img
+              src="http://www.detalheprotetico.com.br/img/logo_detalhe_web.png"
+              width="80px"
+            />
+          </td>
+          <td
+            style="text-align:center;font-family: Arial, Helvetica, sans-serif;font-size:14px;color:#000099"
+          >
+            <b>NOTA DE ENTREGA nº {{ entregaId }} <br />({{ nomeClinica }})</b>
+          </td>
+        </tr>
+      </table>
+
+      <br />
+      <div *ngFor="let pedido of pedidos">
+        <table
+          style="width: 600px !important;margin: auto; font-family: Arial, Helvetica, sans-serif;font-size:12px; text-align:left;"
+        >
+          <tr height="20">
+            <td style="text-align: center;" colspan="4">
+              <b>PEDIDO nº {{ pedido.id }}</b>
+            </td>
+          </tr>
+          <tr height="20">
+            <td width="100"><b>Data Pedido</b></td>
+            <td>{{ pedido.dataPedido | date: "dd/MM/yyyy" }}</td>
+          </tr>
+
+          <tr height="20">
+            <td><b>Dentista</b></td>
+            <td>{{ pedido.dentista }}</td>
+          </tr>
+          <tr height="20">
+            <td><b>Paciente</b></td>
+            <td>{{ pedido.nomePaciente }}</td>
+          </tr>
+        </table>
+
+        <table
+          style="width: 600px !important;margin: auto;font-family: Arial, Helvetica, sans-serif;border-collapse: collapse;border:1px solid #ccc; font-size:12px;padding:5px;text-align:left; "
+        >
+          <tr
+            height="20"
+            style="border-bottom:1px solid #ccc;text-align:center;"
+          >
+            <td width="10%"></td>
+            <td width="40%" style="text-align: center;"><b>Derscrição</b></td>
+            <td width="20%" style="text-align: center;">
+              <b>Valor Unitário</b>
+            </td>
+            <td width="10%" style="text-align: center;"><b>Qde</b></td>
+            <td width="20%" style="text-align: center;"><b>Total</b></td>
+          </tr>
+          <tr
+            height="20"
+            *ngFor="let item of pedido.itens; let i = index"
+            style="border-bottom:1px solid #ccc;"
+          >
+            <td style="text-align: center;">{{ i + 1 }}</td>
+            <td>{{ item.descricao }}</td>
+            <td style="text-align: right;padding-right:5px">
+              {{ item.valorUnitario | currency: "BRL":"symbol":"0.2-2":"pt" }}
+            </td>
+            <td style="text-align: center;">{{ item.qde }}</td>
+            <td style="text-align: right;padding-right:5px">
+              {{ item.valorTotal | currency: "BRL":"symbol":"0.2-2":"pt" }}
+            </td>
+          </tr>
+          <tr height="20" style="border-bottom:1px solid #ccc;">
+            <td colspan="4"><b>Valor Total</b></td>
+            <td style="text-align: right;padding-right:5px">
+              <b>
+                {{
+                  pedido.valorTotal | currency: "BRL":"symbol":"0.2-2":"pt"
+                }}</b
+              >
+            </td>
+          </tr>
+
+          <tr></tr>
+          <tr
+            height="20"
+            *ngIf="pedido.desconto > 0"
+            style="border-bottom:1px solid #ccc;"
+          >
+            <td colspan="4">
+              <b>Desconto ({{ pedido.desconto }} %)</b>
+            </td>
+            <td style="text-align: right;padding-right:5px">
+              <b>
+                {{
+                  pedido.valorTotal - pedido.valorLiquido
+                    | currency: "BRL":"symbol":"0.2-2":"pt"
+                }}</b
+              >
+            </td>
+          </tr>
+          <tr height="20" *ngIf="pedido.desconto > 0">
+            <td colspan="4"><b>Valor Total Líquido</b></td>
+            <td style="text-align: right;padding-right:5px">
+              <b>
+                {{
+                  pedido.valorLiquido | currency: "BRL":"symbol":"0.2-2":"pt"
+                }}</b
+              >
+            </td>
+          </tr>
+        </table>
+
+        <br />
+      </div>
+      <br />
+      <br />
+
+      <div
+        style="text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px"
+      >
+        <b>Observações:</b> {{ obs }}
+      </div>
+
+      <div
+        style="text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px"
+      >
+        <b>Valor total da entrega:</b>
+        {{ totalEntrega | currency: "BRL":"symbol":"0.2-2":"pt" }}
+      </div>
+
+      <div
+        style="text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px"
+      >
+        <b>Data da entrega:</b> ___/___/________
+      </div>
+
+      <div
+        style="text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;"
+      >
+        <b>Nome legível: </b>___________________________________________
+      </div>
+    </div>
+  </div>
 </div>
-</div>
-<br>    
+<br />
